# kvcache-calculator

./: .gitignore  AGENTS.md  INSTALL.md  LICENSE  README.md  README.zh.md  pyproject.toml
.github/workflows/: static.yml
configs/: public_multi_agent_qwen3_5_27b.json  public_multi_agent_qwen3_5_27b_1x1_h20.json  public_trace_qwen3_5_27b.json  public_trace_qwen3_5_27b_1x1_h20.json  public_trace_qwen3_5_27b_1x1_h20_planning_norm.json  public_trace_qwen3_5_27b_planning_norm.json  sample_benchmark_result.jsonl  sample_lmsys_chat_1m.jsonl  sample_sharegpt_style.jsonl
datasets/: registry.json
docs/: correctness_guide.en.md  correctness_guide.md  correctness_guide.zh.md  design_guide.en.md  design_guide.md  design_guide.zh.md  four_layer_model.en.md  four_layer_model.md
scripts/: generate_test_vectors.py  validate_web.sh
src/kvcache_upper_bound/: __init__.py  __main__.py
src/kvcache_upper_bound_oracle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  test_bucket_output_files.py  test_bucket_reporting.py  test_capacity_oracle.py  test_cli_generate_trace.py  test_content_oracle.py  test_dataset_converters.py  test_lfu.py  test_lru_oracle.py  test_multi_agent_calibration.py  test_multi_agent_heuristic.py  test_multi_agent_structure.py  test_multi_turn_accuracy.py  test_normalizer.py  test_prefix_aware.py  test_strict_prefix_oracle.py  test_synthetic_generator.py  test_trace_loader.py  test_vectors_heuristic.json  test_verification_reference.py  validate_js_parity.mjs
website/: README.md  calculator.html  index.html
(+52 files in other folders)
