[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kvcache-upper-bound-oracle"
version = "0.1.0"
description = "Offline KVCache upper bound analyzer for Bailian traces"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = []

[project.scripts]
kvcache-upper-bound = "kvcache_upper_bound.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
